<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_registration"
    tools:context=".kezdoActivity.Reg2Activity">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="20dp"
        android:src="@drawable/back" />

    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:src="@drawable/icon" />

    <TextView
        android:id="@+id/textCim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnBack"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/bold"
        android:text="@string/reg"
        android:textColor="@color/gray"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/inputFirstname"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCim"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/input"
        android:hint="@string/firstname"
        android:inputType="textCapSentences"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/gray" />

    <EditText
        android:id="@+id/inputLastname"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputFirstname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/input"
        android:hint="@string/lastname"
        android:inputType="textCapSentences"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingLeft="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/gray" />

    <TextView
        android:id="@+id/textBirthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputLastname"
        android:layout_centerHorizontal="true"
        android:text="@string/birthdate"
        android:textColor="@color/gray"
        android:textSize="20sp" />

    <DatePicker
        android:id="@+id/inputBirthdate"
        android:layout_width="340dp"
        android:layout_height="170dp"
        android:layout_below="@id/textBirthdate"
        android:layout_centerHorizontal="true"
        android:background="@drawable/inputdatepicker"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        android:minDate="01/01/1900"
        android:padding="10dp" />

    <Button
        android:id="@+id/btnNext"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputBirthdate"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button"
        android:text="@string/next"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marVanProfil"
            android:textColor="@color/gray"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/bold"
            android:text="@string/jelentkezzBe"
            android:textColor="@color/rebelBlue"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>
