<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    tools:context=".kezdoActivity.LoginActivity">

    <ImageView
        android:id="@+id/btnIcon"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        android:layout_marginEnd="30dp"
        android:src="@drawable/icon_white" />

    <TextView
        android:id="@+id/textCim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnIcon"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:fontFamily="@font/bold"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="35sp" />

    <EditText
        android:id="@+id/inputUsernameEmail"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/textCim"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/inputlogin"
        android:hint="@string/usernameEmail"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/midGray" />

    <EditText
        android:id="@+id/inputPassword"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputUsernameEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/inputlogin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="20dp"
        android:paddingTop="15dp"
        android:paddingEnd="15dp"
        android:paddingBottom="15dp"
        android:singleLine="true"
        android:textColor="@color/white"
        android:textColorHint="@color/midGray" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/inputPassword"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nincsMegProfil"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/btnReg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/bold"
            android:text="@string/regisztralj"
            android:textColor="@color/white"
            android:textSize="20sp" />

    </LinearLayout>

</RelativeLayout>