<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".adminActivityk.AdminActivity"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/relativeLayout">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:id="@+id/textCim"
                android:text="@string/jaratok"
                android:textSize="40sp"
                android:textColor="@color/gray"
                android:fontFamily="@font/bold" />

        </RelativeLayout>
    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:layout_above="@id/btnLogout"
        android:id="@+id/btnInsert"
        android:background="@drawable/button"
        android:text="@string/ujJarat"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:id="@+id/btnLogout"
        android:background="@drawable/buttonred"
        android:text="@string/logout"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textAllCaps="false" />

</RelativeLayout>
