<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textCim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/bold"
            android:text="@string/jaratok"
            android:textColor="@color/gray"
            android:textSize="40sp" />

        <EditText
            android:id="@+id/inputHonnan"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/textCim"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/input"
            android:hint="@string/from"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/gray" />

        <EditText
            android:id="@+id/inputHova"
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/inputHonnan"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/input"
            android:hint="@string/to"
            android:lines="1"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingTop="15dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="15dp"
            android:singleLine="true"
            android:textColor="@color/gray" />

    </RelativeLayout>

</ScrollView>