<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:scrollbars="none">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/relativeLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:id="@+id/textCim"
            android:text="@string/jaratok"
            android:textSize="40sp"
            android:textColor="@color/gray"
            android:fontFamily="@font/bold" />

        <AutoCompleteTextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/textCim"
            android:layout_marginTop="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:id="@+id/inputHonnan"
            android:background="@drawable/input"
            android:hint="@string/from"
            android:focusable="false"
            android:textColor="@color/gray"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true" />

        <AutoCompleteTextView
            android:layout_width="340dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/inputHonnan"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:paddingStart="20dp"
            android:paddingLeft="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:id="@+id/inputHova"
            android:background="@drawable/input"
            android:hint="@string/to"
            android:focusable="false"
            android:textColor="@color/gray"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true" />

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="invisible"
            android:id="@+id/loading"
            android:elevation="5dp"
            app:lottie_fileName="loading.json"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_speed="1.5" />

    </RelativeLayout>

</ScrollView>